# Learn_CppPrimer

./: .gitignore  README.md
15/libquery/: CMakeLists.txt  README.md  build.sh
15/libquery/include/query/: and_query.h  not_query.h  or_query.h  query.h  query_base.h  query_result.h  query_types.h  text_query.h  word_query.h
15/libquery/src/: and_query.cc  not_query.cc  or_query.cc  query.cc  query_base.cc  query_result.cc  text_query.cc  word_query.cc
15/libquery/test/: CMakeLists.txt
15/libquery/test/src/: test.cc
